increasing font size on mobile to prevent zoom in

--- a/styles.css
+++ b/styles.css
@@ -404,10 +404,10 @@ h6 {
     margin-top: -40px;
   }
   .form-label {
-    font-size: 12px;
+    font-size: 16px;
   }
   .user-input {
-    font-size: 12px;
+    font-size: 16px;
   }
   #user-form-container {
     margin-top: 0vh;
